Adding links to sphinx documentation

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                     <li><a class="smoothscroll"  href="#services" title="services">Outline</a></li>
                     <li><a class="smoothscroll"  href="#team" title="works">Team</a></li>
+                    <li><a href="https://carleton-cs-energy-analytics.github.io/marthas-dashboard/" title="documentation">Documentation</a></li>
                 </ul>
     
 <!-- 
@@ -111,6 +112,9 @@
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         the project
                     </a>
+                    <a href="https://carleton-cs-energy-analytics.github.io/marthas-dashboard/" class="btn btn--stroke">
+                     	documentation
+                    </a>
                 </div>
 
             </div>
@@ -143,7 +147,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are The Point</h1>
+                <h1 class="display-1 display-1--light">What is The Point</h1>
             </div>
         </div> <!-- end section-header -->
 
