Add link to our presen presentation as pdf

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                    <li><a class="smoothscroll"  href="#services" title="services">Outline</a></li>
+                    <li><a class="smoothscroll"  href="#outline" title="outline">Outline</a></li>
                     <li><a class="smoothscroll"  href="#team" title="works">Team</a></li>
                     <li><a href="https://carleton-cs-energy-analytics.github.io/marthas-dashboard/" title="documentation">Documentation</a></li>
+                    <li><a href="presentation.pdf" title="presentation">Presentation</a></li>
                 </ul>
     
 <!-- 
@@ -189,7 +190,7 @@
 
     <!-- services
     ================================================== -->
-    <section id='services' class="s-services">
+    <section id='outline' class="s-services">
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
