Add link to code so its more clear

--- a/index.html
+++ b/index.html
@@ -107,14 +107,11 @@
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a href="#team" class="smoothscroll btn btn--stroke">
-                        the team
-                    </a>
-                    <a href="#about" class="smoothscroll btn btn--stroke">
-                        the project
-                    </a>
                     <a href="https://carleton-cs-energy-analytics.github.io/marthas-dashboard/" class="btn btn--stroke">
                      	documentation
+                    </a>
+                    <a href="https://github.com/carleton-cs-energy-analytics" class="btn btn--stroke">
+                     	code
                     </a>
                 </div>
 
