--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                 <h3>Unified Energy System: What's the Point?</h3>
 
                 <h1>
-                    This was a Computer Science Comps project
-                    in Fall 2017, Winter 2018 on
+                    This was a Computer Science Comps project on
                     energy usage and analysis at
                     Carleton College.
                 </h1>
