Adding text for what we did

--- a/index.html
+++ b/index.html
@@ -203,9 +203,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Data Cleaning</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>We turned points that are named like MC02ZT into points named like Room Temperature in the 2nd Calculus Room in the CMC.
                     </p>
                 </div>
             </div>
@@ -216,9 +214,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Database Structure</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>We have a database with over 3 million point values stored in it, all appropriately taxonified thanks to a rigorous database structure.
                     </p>
                 </div>
             </div>
@@ -229,9 +225,7 @@
                 </div>  
                 <div class="service-text">
                     <h3 class="h2">API</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>We created an API to allow client apps consistent access to our data and to abstract away the details of querying our database.
                     </p>
                 </div>
             </div>
@@ -242,9 +236,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Dashboard</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>We created a dashboard with tools like a heatmap and automated anomaly deteciton to help facilities rapidly detect and respond to problems.
                     </p>
                 </div>
             </div>
@@ -255,9 +247,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Analysis</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>We did experimental data analysis using tools like decision trees, association rules, and k-means clustering to gain greater insight into the data.
                     </p>
                 </div>
             </div>
@@ -266,9 +256,7 @@
                 <div class="service-icon"><i class="icon-earth"></i></div>
                 <div class="service-text">
                     <h3 class="h2">Future Work</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>We created a solid base for future researchers to delve more deeply into the data with new analysis tools and dashboard widgets.
                     </p>
                 </div>
             </div>
