added Kiya's description

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             </a>
     
                             <div class="item-folio__caption">
-                                <p>Description of Kiya.</p>
+                                <p>Kiya is a Computer Science major from Neenah, Wisconsin.  She enjoys eating Carolyn's macarons.</p>
                             </div>
     
                         </div>
