Edit Jon's description

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                             </a>
     
                             <div class="item-folio__caption">
-                                <p>Description of Jon</p>
+                                <p>Jon is a Computer Science student at Carleton College. He is from Kimball, Minnesota and enjoys watching YouTube videos and napping. </p>
                             </div>
     
                         </div>
