--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             </a>
     
                             <div class="item-folio__caption">
-                                <p>Description of Dustin</p>
+                                <p>Dustin is a Computer Science student at Carleton College from Boulder, Colorado. He plays folk guitar and prefers to travel by bike.</p>
                             </div>
     
                         </div>
