Added personal info to index.html

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                             </a>
     
                             <div class="item-folio__caption">
-                                <p></p>
+                                <p>Zephyr is a Physics / Compsuter Science student from Marlborough, Massachusetts.  He loves board games, magic the gathering, rock climbing, and the great outdoors. </p>
                             </div>
     
                         </div>
